# BitMasher-Firmware

./: CMakeLists.txt  README.md
Drivers/: MW_Driver_CS42L52.c  MW_Driver_CS42L52.h  MW_Driver_LS013B7DH03.c  MW_Driver_LS013B7DH03.h
silabs_gecko_sdk/startup_files/: efm32pg12.ld
src/: main.c
src/App/Assets/: BM_Assets_Backgrounds.c  BM_Assets_Backgrounds.h  BM_Assets_Cats.c  BM_Assets_Cats.h  BM_Assets_Clock.c  BM_Assets_Clock.h  BM_Assets_Clouds.c  BM_Assets_Clouds.h  BM_Assets_Glitch.c  BM_Assets_Glitch.h  BM_Assets_Menu.c  BM_Assets_Menu.h  BM_Assets_Telephone.c  BM_Assets_Telephone.h  BM_Assets_Unicycle.c  BM_Assets_Unicycle.h
src/App/Controllers/: BM_Controller_Active.c  BM_Controller_Active.h  BM_Controller_Menu.c  BM_Controller_Menu.h  BM_Controller_Sleep.c  BM_Controller_Sleep.h
src/App/Scenes/: BM_Scene.h  BM_SceneRegister.c  BM_SceneRegister.h
src/App/Scenes/Cloud/: BM_SceneDelegate_Clouds_Cloud.c  BM_SceneDelegate_Clouds_Cloud.h  BM_SceneDelegate_Clouds_PC.c  BM_SceneDelegate_Clouds_PC.h  BM_SceneDelegate_Clouds_Twinkle.c  BM_SceneDelegate_Clouds_Twinkle.h  BM_Scene_Clouds.c  BM_Scene_Clouds.h
src/App/Scenes/Glitch/: BM_SceneDelegate_Glitch_Window.c  BM_SceneDelegate_Glitch_Window.h  BM_Scene_Glitch.c  BM_Scene_Glitch.h  BM_Scene_Glitch_Common.h
src/App/Scenes/Menu/: BM_Scene_MainMenu.c  BM_Scene_MainMenu.h
src/App/Scenes/Phone/: BM_SceneDelegate_Phone_BitCrush.c  BM_SceneDelegate_Phone_BitCrush.h  BM_SceneDelegate_Phone_Caller.c  BM_SceneDelegate_Phone_Caller.h  BM_SceneDelegate_Phone_Flutter.c  BM_SceneDelegate_Phone_Flutter.h  BM_SceneDelegate_Phone_PhoneBook.c  BM_SceneDelegate_Phone_PhoneBook.h  BM_Scene_Phone.c  BM_Scene_Phone.h  BM_Scene_Phone_Common.h
src/App/Scenes/Settings/: BM_GUIElements.c  BM_GUIElements.h  BM_Scene_Settings.c  BM_Scene_Settings.h  BM_Scene_Settings_Audio.c  BM_Scene_Settings_Audio.h  BM_Scene_Settings_Clock.c  BM_Scene_Settings_Clock.h
src/App/Scenes/Unicycle/: BM_SceneDelegate_Unicycle_Buildings.c  BM_SceneDelegate_Unicycle_Buildings.h  BM_SceneDelegate_Unicycle_Cat.c  BM_SceneDelegate_Unicycle_Cat.h  BM_SceneDelegate_Unicycle_Clouds.c  BM_SceneDelegate_Unicycle_Clouds.h  BM_SceneDelegate_Unicycle_Road.c  BM_SceneDelegate_Unicycle_Road.h  BM_Scene_Unicycle.c  BM_Scene_Unicycle.h  BM_Scene_Unicycle_Common.h
src/Platform/: BM_Common.c  BM_Common.h  BM_DebugServices.c  BM_DebugServices.h  BM_ErrorCodes.h  BM_RTCModule.c  BM_RTCModule.h  BM_UserIOServices.c  BM_UserIOServices.h
src/Platform/AudioEngine/: BM_AudioEngine.c  BM_AudioEngine.h
src/Platform/Graphics/: BM_RenderEngine.c  BM_RenderEngine.h  BM_Sprite.c  BM_Sprite.h  font.c  font.h
src/Platform/Peripherals/: BM_ISR.c  BM_ISR.h  BM_PeripheralCommmon.c  BM_PeripheralCommon.h
src/Platform/Physics/: BM_CollisionModule.c  BM_CollisionModule.h
src/Platform/Power_Clock_Management/: BM_ClockTree.c  BM_ClockTree.h  BM_PowerManagement.c  BM_PowerManagement.h
src/Platform/Tests/: BM_RTCTests.c  BM_RTCTests.h
src/Platform/Utils/: BM_ServiceQueue.c  BM_ServiceQueue.h
